# HaskellBookExercises

./: isNfOrWhnf.hs
Chapter10/: dbProcessing.hs  exercises.hs  scans.hs
Chapter11/: allProgrammers.hs  binTree.hs  exercises.hs  newtype.hs
Chapter12/: exercises.hs  smallEitherLib.hs  smallMaybeLib.hs  unfolds.hs
Chapter13/: exercises.hs
Chapter13/hangman/: hangman.cabal
Chapter13/hangman/data/: dict.txt
Chapter13/hangman/src/: Main.hs
Chapter14/addition/: addition.cabal
Chapter14/morse/: morse.cabal
Chapter14/morse/src/: Main.hs  Morse.hs  WordNumber.hs
Chapter14/morse/test/: coarbitrary.hs  exercise_qcheck.hs  playground.hs  tests.hs  wordnumber.hs
Chapter15/: madness.hs  optional_monoid.hs
Chapter15/orphan-instance/: Listy.hs
Chapter15/testing-monoids/: README.md  testing-monoids.cabal
Chapter15/testing-monoids/src/: Monoid-Exercises.hs  Semigroup-Exercises.hs  Tests.hs
Chapter16/: .exercises.hs.swp  exercises.hs  test.hs
Chapter16/exercises/: exercises.cabal
Chapter16/exercises/src/: Exercises.hs
Chapter16/testing-functor/: README.md  testing-functor.cabal
Chapter16/testing-functor/src/: FuncExercises.hs  Tests.hs
Chapter17/: .make-it-typecheck.hs.swp  make-it-typecheck.hs
Chapter18/: .exercises.hs.swp  .myEitherMonad.hs.swp  bind.hs  eitherMonad.hs  exercises.hs  listMondadPlayground.hs  myEitherMonad.hs
Chapter18/testing-monads/: README.md  testing-monads.cabal
Chapter18/testing-monads/app/: Exercises.hs  Main.hs
Chapter2/: test.hs
Chapter22/: .funApplicative.hs.swp  .funMonad.hs.swp  funApplicative.hs  funMonad.hs
Chapter24/parser-playground/: appExercises.hs  parser-playground.cabal
Chapter24/parser-playground/app/: AltParsing.hs  Exercises.hs  Fractions.hs  IniParsing.hs  Main.hs  Marshalling.hs  PolymorphicParsers.hs
Chapter25/: applicativeCompose.hs  bifunctor.hs
Chapter26/: exercises.hs  liftMore.hs  maybeT.hs  monadIO.hs  morra.hs  myReaderT.hs  myStateT.hs  outerInner.hs
Chapter27/: exercises.hs  makeItBottom.hs
Chapter3/: strings.hs
Chapter4/: types.hs
Chapter5/: exercises.hs  wtf.hs
Chapter6/: typeClasses.hs  wtf.hs
Chapter7/: bla.hs  exercises.hs  grabBag.hs
Chapter8/: exercises.hs
Chapter9/: cipher.hs  enumFromTo.hs  exercises.hs  fearfulSymmetry.hs  zip.hs
Chapter9/Chapter14/addition/: Addition.hs
Chapter9/Chapter14/morse/: morse.cabal
Chapter9/Chapter14/morse/test/: coarbitrary.hs
