name:                parser-playground
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/parser-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable parser-playground-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parser-playground
                     , trifecta 
                     , raw-strings-qq
                     , hspec 
                     , bytestring 
                     , containers 
                     , text 
                     , attoparsec 
                     , aeson 
                     , scientific 
                     , charset 
  default-language:    Haskell2010

