name:                morse
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/morse#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Text 
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Morse 
                     , WordNumber
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , QuickCheck
                     , hspec 
  default-language:    Haskell2010

executable morse
  hs-source-dirs:      src 
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:     Morse
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , morse
                     , containers
                     , QuickCheck 
  default-language:    Haskell2010

test-suite tests 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  build-depends:       base
                     , containers 
                     , morse
                     , QuickCheck 
                     , hspec 
  other-modules:       QuickCheck_Exercises  
  ghc-options:         -Wall -fwarn-orphans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/morse
